# oscore

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
doxygen/: Doxyfile
src/: CMakeLists.txt  coap.c  coap.h  coap_client.c  coap_server.c  cose.c  cose.h  cose_test.c  cose_test.h  cwt.c  cwt.h  ecc.h  edhoc.c  edhoc.h  edhoc_protocol.c  edhoc_protocol.h  edhoc_test.c  edhoc_test.h  main.c  microcoap.c  microcoap.h  oscore.c  oscore.h  oscore_test.c  oscore_test.h  protocol.c  protocol.h  test.c  tests.cpp  types.h  utils.c  utils.h
